# backend/src/main/java/com/cheonjiyeon/api/chat/ChatRoomRepository.java
@@ -1,0 +1,9 @@
+package com.cheonjiyeon.api.chat;
+
+import org.springframework.data.jpa.repository.JpaRepository;
+
+import java.util.Optional;
+
+public interface ChatRoomRepository extends JpaRepository<ChatRoomEntity, Long> {
+    Optional<ChatRoomEntity> findByBookingId(Long bookingId);
+}
